Pr 16 bug modal do projeto (#23)
* :wrench: refactor: include new fonts

* :wrench: refactor: include new colors

* :wrench: refactor: change background color

* :bug: fix: change styles and fix layout bug

* :wrench: refactor: remove unused code

* :bug: fix: fix bug in mobile

* :bug: fix: ajust mobile layout

* :wrench: refactor: ajust icons

* :hammer: build: update bugdet

--- a/src/app/shared/components/button-secondary/button-secondary.component.scss
+++ b/src/app/shared/components/button-secondary/button-secondary.component.scss
@@ -14,7 +14,7 @@ button {
   a {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-end;
     gap: .6rem;
     font: {
       size: 1.4rem;
@@ -24,6 +24,10 @@ button {
     text-decoration: none;
     text-shadow: .1rem .1rem .1rem rgba(0, 0, 0, 0.8);
     transition: var(--transitions-fast);
+
+    img {
+      margin-bottom: .3rem;
+    }
 
     @media screen and (min-width: 768px) {
       font-size: 1.6rem;
